// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header TopNavbar - light theme 1`] = `
.c4 {
  -webkit-transition: opacity 200ms ease-out, color 200ms ease-out;
  transition: opacity 200ms ease-out, color 200ms ease-out;
  outline: none;
  font-weight: 400;
  font-size: 1.0625rem;
  line-height: 1.5rem;
  padding: 0.625rem 0.9375rem 0.875rem;
  outline: 0.25rem solid transparent;
}

.c4:focus {
  outline-color: #65FFCD;
  z-index: 1;
}

.c4:active {
  outline: none;
}

.c3 {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #fff;
  color: #333333;
}

.c3:hover,
.c3 > a:hover {
  background: #333333;
  color: #a9a9a9;
}

.c3 > a:active {
  background: #333333;
  color: #fff;
}

.c3 > a.active {
  background: #fff;
  color: #828282;
}

.c3 > a.active:active {
  background: #fff;
  color: #828282;
}

.c3 > a.active:hover {
  color: #333333;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  height: 5.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: none;
}

@media screen and (min-width:960px) {
  .c3 {
    margin-right: 0.375rem;
  }

  .c3:last-child {
    margin-right: 0rem;
  }
}

@media screen and (min-width:960px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding: 1.25rem 0rem 1rem;
    padding-right: 0rem;
  }
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <a
      aria-current="page"
      className=""
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      style={Object {}}
      title="Return to Homepage"
    >
      <img
        alt="yld logo"
        height="48"
        role="link"
        src="test-file-stub"
      />
    </a>
  </div>
  <ul
    className="c2"
  >
    <li
      className="c3"
    >
      <a
        aria-current="page"
        className="c4 active"
        href="/"
        onClick={[Function]}
        onMouseEnter={[Function]}
        style={Object {}}
        title="Here"
      >
        Here
      </a>
    </li>
    <li
      className="c3"
    >
      <a
        className="c4"
        href="/there"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="There"
      >
        There
      </a>
    </li>
    <li
      className="c3"
    >
      <a
        className="c4"
        href="/https:/uk.linkedin.com/"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="LinkedIn (external anchor)"
      >
        LinkedIn (external anchor)
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots Header TopNavbar with dropdowns - light theme 1`] = `
.c11 {
  -webkit-transition: opacity 200ms ease-out, color 200ms ease-out;
  transition: opacity 200ms ease-out, color 200ms ease-out;
  outline: none;
  font-weight: 400;
  font-size: 1.0625rem;
  line-height: 1.5rem;
  padding: 0.625rem 0.9375rem 0.875rem;
  outline: 0.25rem solid transparent;
}

.c11:focus {
  outline-color: #65FFCD;
  z-index: 1;
}

.c11:active {
  outline: none;
}

.c10 {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #fff;
  color: #333333;
}

.c10:hover,
.c10 > a:hover {
  background: #333333;
  color: #a9a9a9;
}

.c10 > a:active {
  background: #333333;
  color: #fff;
}

.c10 > a.active {
  background: #fff;
  color: #828282;
}

.c10 > a.active:active {
  background: #fff;
  color: #828282;
}

.c10 > a.active:hover {
  color: #333333;
}

.c6 {
  stroke: currentColor;
  stroke-width: 0.1875rem;
  fill: none;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
  -webkit-transition: -webkit-transform 0s ease 0.1s;
  -webkit-transition: transform 0s ease 0.1s;
  transition: transform 0s ease 0.1s;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  -webkit-transition: opacity 200ms ease-out, color 200ms ease-out;
  transition: opacity 200ms ease-out, color 200ms ease-out;
  outline: none;
  font-weight: 400;
  font-size: 1.0625rem;
  line-height: 1.5rem;
  padding: 0.625rem 0.9375rem 0.875rem;
  outline: 0.25rem solid transparent;
  width: 100%;
  background: #f9f9f9;
  color: #828282;
}

.c9:focus {
  outline-color: #65FFCD;
  z-index: 1;
}

.c9:active {
  outline: none;
}

.c9:hover,
.c9.active {
  color: #333333;
}

.c3 {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  position: relative;
  cursor: pointer;
  background: transparent;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

.c3 > span {
  background: #fff;
  color: #333333;
}

.c3 > span:hover {
  background: #333333;
  color: #a9a9a9;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: outline 300ms ease-out;
  transition: outline 300ms ease-out;
  z-index: 2;
  -webkit-transition: opacity 200ms ease-out, color 200ms ease-out;
  transition: opacity 200ms ease-out, color 200ms ease-out;
  outline: none;
  font-weight: 400;
  font-size: 1.0625rem;
  line-height: 1.5rem;
  padding: 0.625rem 0.9375rem 0.875rem;
  outline: 0.25rem solid transparent;
}

.c4:focus {
  outline-color: #65FFCD;
  z-index: 1;
}

.c4:active {
  outline: none;
}

.c5 {
  padding-right: 0.375rem;
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7 {
  position: absolute;
  width: 10rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  top: 3rem;
  left: -9999px;
  opacity: 0;
  -webkit-transition: opacity 300ms ease;
  transition: opacity 300ms ease;
  background: #f9f9f9;
  z-index: 999;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  height: 5.25rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: none;
}

@media screen and (min-width:960px) {
  .c10 {
    margin-right: 0.375rem;
  }

  .c10:last-child {
    margin-right: 0rem;
  }
}

@media screen and (min-width:960px) {
  .c3 {
    margin-right: 0.375rem;
  }

  .c3:last-child {
    margin-right: 0rem;
  }
}

@media screen and (min-width:960px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    padding: 1.25rem 0rem 1rem;
    padding-right: 0rem;
  }
}

<nav
  className="c0"
>
  <div
    className="c1"
  >
    <a
      aria-current="page"
      className=""
      href="/"
      onClick={[Function]}
      onMouseEnter={[Function]}
      style={Object {}}
      title="Return to Homepage"
    >
      <img
        alt="yld logo"
        height="48"
        role="link"
        src="test-file-stub"
      />
    </a>
  </div>
  <ul
    className="c2"
  >
    <li
      aria-expanded={false}
      aria-haspopup="true"
      className="c3"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
    >
      <span
        className="c4"
        tabIndex="0"
      >
        <span
          className="c5"
          data-event={null}
        >
          First dropdown
        </span>
        <svg
          className="c6"
          height="6"
          viewBox="0 0 6 6"
          width="6"
        >
          <polyline
            points="0,0 6,0 6,6"
          />
        </svg>
      </span>
      <ul
        className="c7"
      >
        <li
          className="c8"
        >
          <a
            className="c9"
            href="/item-1/"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            title="Item 1"
          >
            Item 1
          </a>
        </li>
        <li
          className="c8"
        >
          <a
            className="c9"
            href="/item-2/"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            title="Item 2"
          >
            Item 2
          </a>
        </li>
        <li
          className="c8"
        >
          <a
            className="c9"
            href="/item-3/"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            title="Item 3"
          >
            Item 3
          </a>
        </li>
      </ul>
    </li>
    <li
      className="c10"
    >
      <a
        className="c11"
        href="/anchor/"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="First anchor"
      >
        First anchor
      </a>
    </li>
    <li
      className="c10"
    >
      <a
        className="c11"
        href="https://uk.linkedin.com/"
        onClick={[Function]}
        rel="noopener noreferrer"
        target="_blank"
        title="LinkedIn (external anchor)"
      >
        LinkedIn (external anchor)
      </a>
    </li>
    <li
      aria-expanded={false}
      aria-haspopup="true"
      className="c3"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
    >
      <span
        className="c4"
        tabIndex="0"
      >
        <span
          className="c5"
          data-event={null}
        >
          Second dropdown
        </span>
        <svg
          className="c6"
          height="6"
          viewBox="0 0 6 6"
          width="6"
        >
          <polyline
            points="0,0 6,0 6,6"
          />
        </svg>
      </span>
      <ul
        className="c7"
      >
        <li
          className="c8"
        >
          <a
            className="c9"
            href="/go-here/"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            title="Go here"
          >
            Go here
          </a>
        </li>
        <li
          className="c8"
        >
          <a
            className="c9"
            href="/go-there/"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            title="Go there"
          >
            Go there
          </a>
        </li>
      </ul>
    </li>
    <li
      className="c10"
    >
      <a
        className="c11"
        href="/last-anchor/"
        onClick={[Function]}
        onMouseEnter={[Function]}
        title="Last anchor"
      >
        Last anchor
      </a>
    </li>
  </ul>
</nav>
`;
